--- a/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding05-common-util/pom.xml
+++ b/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding05-common-util/pom.xml
@@ -2,19 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>crowdfunding01-admin-parent</artifactId>
-        <groupId>com.tawe</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.tawe</groupId>
     <artifactId>crowdfunding05-common-util</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
