--- a/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding02-admin-webui/src/main/webapp/WEB-INF/web.xml
+++ b/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding02-admin-webui/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!--SpringSecurity filterChain-->
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <!--配置SpringMVC的前端控制器-->
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
