--- a/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding03-admin-component/pom.xml
+++ b/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding03-admin-component/pom.xml
@@ -12,6 +12,19 @@
     <artifactId>crowdfunding03-admin-component</artifactId>
 
     <dependencies>
+        <!--加入 SpringSecurity 依赖-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.tawe</groupId>
             <artifactId>crowdfunding04-admin-entity</artifactId>
