登录认证使用 数据库版 代替 内存版
完善了 Role & Auth 的读取

--- a/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding02-admin-webui/src/main/webapp/WEB-INF/web.xml
+++ b/4-Spring/SpringMVC/Crowdfunding/code/crowdfunding02-admin-webui/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,7 @@
   <!--needed for ContextLoaderListener-->
   <context-param>
     <param-name>contextConfigLocation</param-name>
+    <!--<param-value>classpath:spring-persist-*.xml classpath:spring-security.xml</param-value>-->
     <param-value>classpath:spring-persist-*.xml</param-value>
   </context-param>
   <!--Bootstraps the root web application context before servlet initialization-->
