统一 异常处理 & 日志

--- a/4-Spring/SpringBoot/code/guli_parent/guli_common/service_base/pom.xml
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_common/service_base/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service_base</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.tawe</groupId>
+            <artifactId>common_utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
