--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application-dev.properties
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application-dev.properties
@@ -18,3 +18,6 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+
+# 设置日志级别
+#logging.level.root=debug
