--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application.properties
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application.properties
@@ -1,2 +1,26 @@
 # 环境设置：dev、test、prod
 spring.profiles.active=dev
+
+# 服务端口
+server.port=8001
+# 服务名
+spring.application.name=service-edu
+
+# mysql数据库连接
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=root
+
+#mybatis日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+# 指定 mapper 路径
+#mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+
+#返回json的全局时间格式
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+
+# 设置日志级别
+#logging.level.root=debug
