--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_oss/src/main/resources/application.properties
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_oss/src/main/resources/application.properties
@@ -12,3 +12,4 @@ aliyun.oss.file.keyid=your accessKeyId
 aliyun.oss.file.keysecret=your accessKeySecret
 #bucket可以在控制台创建，也可以使用java代码创建
 aliyun.oss.file.bucketname=guli-file
+aliyun.oss.file.filehost=filehost
