课程分类 前端展示

--- a/4-Spring/SpringBoot/code/guli_parent/guli_admin/.env.development
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_admin/.env.development
@@ -4,4 +4,4 @@ ENV = 'development'
 # base api
 # VUE_APP_BASE_API = '/dev-api'
 VUE_APP_BASE_API = 'http://localhost:9001'
-OSS_PATH = 'https://guli-javaor.oss-cn-shanghai.aliyuncs.com/'
+VUE_APP_OSS_PATH = 'https://guli-javaor.oss-cn-shanghai.aliyuncs.com'
