发布课程 + 课程列表
1. 课程大纲列表和章节管理
2. 课时小结管理
3. 课程最终发布
4. 课程列表显示

--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/pom.xml
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/pom.xml
@@ -19,4 +19,11 @@
             <version>2.1.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+            </resource>
+        </resources>
+    </build>
 </project>
