--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application-dev.properties
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ spring.datasource.password=root
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # 指定 mapper 路径
-#mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
