--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/pom.xml
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>service_edu</artifactId>
 
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
         <dependency>
@@ -27,9 +28,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.tawe</groupId>
-            <artifactId>service_vod</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
     </dependencies>
 
