--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application-dev.properties
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application-dev.properties
@@ -9,15 +9,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 
-#mybatis日志
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
 # 指定 mapper 路径
-mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
-
-#返回json的全局时间格式
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=GMT+8
-
-# 设置日志级别
-#logging.level.root=debug
+mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
