--- a/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application.properties
+++ b/4-Spring/SpringBoot/code/guli_parent/guli_service/service_edu/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password=root
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # 指定 mapper 路径
-#mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -27,3 +27,8 @@ spring.jackson.time-zone=GMT+8
 
 # nacos 服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#开启熔断机制
+feign.hystrix.enabled=true
+# 设置hystrix超时时间，默认1000ms
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
